--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "APP_ENV=build webpack NODE_ENV='production' --config core/build.js",
         "lint": "eslint --fix */*.vue *.js",
         "used": "APP_ENV=build webpack --display-used-exports --display-optimization-bailout --config core/build.js",
-        "test:whale": "jest tests/whale.config.test.js && npm run build"
+        "test:w": "jest --watchAll --coverage",
+        "test": "jest --coverage"
     },
     "repository": {
         "type": "git",
@@ -22,13 +23,13 @@
     "homepage": "https://github.com/xiangzongliang/whale-vue#readme",
     "devDependencies": {
         "@babel/cli": "7.2.3",
-        "@babel/core": "7.2.2",
+        "@babel/core": "^7.5.4",
         "@babel/plugin-transform-runtime": "7.2.0",
-        "@babel/preset-env": "7.2.3",
+        "@babel/preset-env": "^7.5.4",
         "@vue/test-utils": "^1.0.0-beta.28",
         "autoprefixer": "^9.4.4",
         "babel-eslint": "^10.0.1",
-        "babel-jest": "^23.6.0",
+        "babel-jest": "^24.8.0",
         "babel-loader": "8.0.4",
         "cache-loader": "^2.0.0",
         "copy-webpack-plugin": "^4.6.0",
@@ -40,8 +41,7 @@
         "file-loader": "^3.0.1",
         "happypack": "5.0.0",
         "html-webpack-plugin": "3.2.0",
-        "inline-manifest-webpack-plugin": "^4.0.2",
-        "jest": "^23.6.0",
+        "jest": "^24.8.0",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "mini-css-extract-plugin": "^0.5.0",
@@ -53,9 +53,11 @@
         "stats-webpack-plugin": "^0.7.0",
         "style-loader": "^0.23.1",
         "thread-loader": "^2.1.1",
+        "ts-loader": "^5.3.3",
         "tslint": "^5.14.0",
         "tslint-config-standard": "^8.0.1",
         "tslint-loader": "^3.5.4",
+        "typescript": "^3.3.3333",
         "url-loader": "^1.1.2",
         "vue-eslint-parser": "^5.0.0",
         "vue-loader": "^15.4.2",
@@ -66,9 +68,7 @@
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.10",
         "webpack-jarvis": "^0.3.2",
-        "webpack-merge": "^4.2.1",
-        "ts-loader": "^5.3.3",
-        "typescript": "^3.3.3333"
+        "webpack-merge": "^4.2.1"
     },
     "dependencies": {
         "@babel/polyfill": "7.2.5",
