--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "mini-css-extract-plugin": "^0.5.0",
+        "mockjs": "^1.0.1-beta3",
         "node-sass": "4.11.0",
         "postcss-loader": "^3.0.0",
         "postcss-pxtorem": "^4.0.1",
@@ -74,8 +75,6 @@
         "@babel/polyfill": "7.2.5",
         "@babel/runtime": "7.2.0",
         "axios": "^0.18.0",
-        "d3": "^5.9.7",
-        "d3-polygon": "^1.0.5",
         "vue": "^2.5.21",
         "vue-class-component": "^7.0.2",
         "vue-property-decorator": "^8.0.0",
