--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@babel/preset-env": "^7.5.4",
         "@vue/test-utils": "^1.0.0-beta.28",
         "autoprefixer": "^9.4.4",
+        "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.1",
         "babel-jest": "^24.8.0",
         "babel-loader": "8.0.4",
