--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "scripts": {
         "dev": "APP_ENV=dev webpack-dev-server --config core/dev.js",
-        "prd": "APP_ENV=build webpack --config core/build.js",
+        "doc": "vuepress dev docs",
+        "build:doc": "vuepress build docs",
         "build": "APP_ENV=build NODE_ENV=production webpack --config core/build.js",
+        "build:r": "rollup -c",
         "lint": "eslint --fix */*.vue *.js",
         "used": "APP_ENV=build webpack --display-used-exports --display-optimization-bailout --config core/build.js",
         "test:w": "jest --watchAll --coverage",
@@ -50,6 +52,8 @@
         "node-sass": "4.11.0",
         "postcss-loader": "^3.0.0",
         "postcss-pxtorem": "^4.0.1",
+        "rollup-plugin-terser": "^5.1.3",
+        "rollup-plugin-visualizer": "^3.3.1",
         "sass-loader": "^7.1.0",
         "speed-measure-webpack-plugin": "^1.2.5",
         "stats-webpack-plugin": "^0.7.0",
